# docusearch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/docusearch/: __init__.py  docusearch.py  types.py
src/docusearch/database/: __init__.py  build_database.py  etl.py
src/docusearch/query/: __init__.py  embedding_manager.py  query_manager.py
src/docusearch/search/: __init__.py  bm25.py  search_client.py  vector_search.py
